Cleanup use of Guava Function
We do not need to explicitly reference Function, but can use
java.util.function.Function and lambdas.

Change-Id: Ic2c84ab14fc5e014d8aaba09274ebb3a45fd649f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>